S178 user tel num (#149)
* impove documentation

* add telephone to user and move label to form instead of template

* remove unless label resolution in template

--- a/templates/common/form/input_telephone.html
+++ b/templates/common/form/input_telephone.html
@@ -1,35 +1,26 @@
+{% load static %}
 
-{% load l10n %}
 <div class="fr-input-group {% if form_input.errors %}fr-select-group--error{% endif %}">
     {% if form_input.label %}
         <label class="fr-label" for="{{form_input.id_for_label}}">
             {{ form_input.label }}
             {% include "common/form/required_field.html" with form_input=form_input %}
+            {% include "common/help_field.html" with form_input=form_input %}
         </label>
     {% endif %}
     <div class="fr-mt-1w block--row-strech" id="{{form_input.id_for_label}}_div">
         <input
             class="fr-input {% if form_input.errors %}fr-input--error{% endif %}"
-            pattern="[0-9]*"
-            min=0
-            step="{% if step %}{{step}}{% else %}1{% endif %}"
-            inputmode="numeric"
-            {% if form_input.errors %}aria-describedby="text-input-error-desc-error"{% endif %}
-            type="number"
+            aria-describedby="text-input-error-desc-error"
+            type="tel"
+            pattern="^\+*[0-9\s]{8,25}$"
             id="{{form_input.id_for_label}}"
             name="{{form_input.html_name}}"
-            {% if form_input.value is not None %}value="{{ form_input.value|unlocalize }}"{% endif %}
+            value="{{ form_input.value|default_if_none:'' }}"
             {% include "common/form/disable_form_input.html" %}>
-
-        <script type="text/javascript" nonce="{{request.csp_nonce}}">
-            document.addEventListener('DOMContentLoaded', function () {
-                document.getElementById('{{form_input.id_for_label}}')
-                    .addEventListener('click', function(){ {{onchange}} });
-            });
-        </script>
         {% include "common/comment_icon.html" with form_input_id=form_input.id_for_label object_field=object_field comments=comments %}
     </div>
-
+    <small>Format: 01 02 03 04 05</small>
     {% for error in form_input.errors %}
         <p id="text-input-error-desc-error" class="fr-error-text">
             {{ error }}
@@ -37,4 +28,5 @@
     {% endfor %}
 </div>
 
-{% include "common/comment_dialog.html" with form_input_id=form_input.id_for_label form_input_html=form_input.html_name  convention=convention object_field=object_field comments=comments %}
+{% include "common/comment_dialog.html" with form_input_id=form_input.id_for_label form_input_html=form_input.html_name convention=convention object_field=object_field comments=comments %}
+
