--- a/templates/common/form/input_date.html
+++ b/templates/common/form/input_date.html
@@ -1,8 +1,8 @@
 <div class="fr-input-group {% if form_input.errors %}fr-select-group--error{% endif %}">
-    {% if label %}
+    {% if form_input.label %}
         <label class="fr-label fr-mb-1w" for="{{form_input.id_for_label}}">
-            {{ label }}
-            {% include "common/mandatory_field.html" with form_input=form_input %}
+            {{ form_input.label }}
+            {% include "common/form/required_field.html" with form_input=form_input %}
             {% include "common/help_field.html" with form_input=form_input %}
         </label>
     {% endif %}
