s324 s332 typo and text

--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -157,7 +157,7 @@
                                         <div class="block--row-strech" id="{{object_field}}_div">
                                             <div class="block--row-strech-1">
                                                 <h4 class="fr-card__title">
-                                                    Références cadastrales
+                                                    Références cadastrales et effet relatif
                                                 </h4>
                                             </div>
                                             <a class="fr-link fr-mb-1w" href="{% url 'conventions:cadastre' convention_uuid=convention.uuid %}#id_reference_cadastrale_div" >
