--- a/templates/emails/instructeur_correction_done.html
+++ b/templates/emails/instructeur_correction_done.html
@@ -8,7 +8,7 @@
     <pre style='margin:20px; padding:5px; border:1px solid grey;'>{{commentaire}}</pre>
 {% endif %}
 
-<p>Si toutes les modifications demandées ont été apportées, vous pourrez valider la convention.</p>
+<p>Si toutes les modifications demandées ont été apportées, vous pourez valider la convention.</p>
 
 <p>N'hésitez pas à vous faire part de tout retour ou suggestion d'amiloration sur la plateforme à l'adresse email <a href="mailto:contact@apilos.beta.gouv.fr">contact@apilos.beta.gouv.fr</a></p>
 
