make the email preference configurable on user profil, add user and edit user + generalise the telephone edition for all screen user

--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -65,7 +65,7 @@
                                 <ul class="fr-links-group">
                                     <li class="fr-mx-2w">
                                         Bonjour&nbsp;
-                                        <strong>{{ user }}</strong>
+                                        <strong>{{ request.user }}</strong>
                                     </li>
                                     <li class="apilos-navbar">
                                         <div class="btn-group">
