add user list to bailleur and administration and manage it as a service

--- a/templates/common/form/select_enum.html
+++ b/templates/common/form/select_enum.html
@@ -1,6 +1,6 @@
 <div class="fr-select-group {% if form_input.errors %}fr-select-group--error{% endif %}">
     {% if form_input.label %}
-        <label class="fr-label" for="{{form_input.id_for_label}}">
+        <label class="fr-label {{ label_class }}" for="{{form_input.id_for_label}}">
             {{ form_input.label }}
         </label>
     {% endif %}
