--- a/templates/settings/edit_user.html
+++ b/templates/settings/edit_user.html
@@ -22,6 +22,11 @@
                             {% include "common/form/input_text.html" with form_input=form.last_name %}
                             {% include "common/form/input_telephone.html" with form_input=form.telephone %}
                             {% include "settings/form/email_preferences.html" with user=user form_input=form.preferences_email %}
+                            {% if request.user.is_superuser %}
+                                <h4>Rôles spéciaux</h4>
+                            {% else %}
+                                <h4>Rôle spécial</h4>
+                            {% endif %}
                             {% include "common/form/input_checkbox.html" with form_input=form.administrateur_de_compte editable=request.user.is_administrator %}
                             {% if request.user.is_superuser %}
                                 {% include "common/form/input_checkbox.html" with form_input=form.is_superuser %}
