--- a/templates/settings/form/email_preferences.html
+++ b/templates/settings/form/email_preferences.html
@@ -1,7 +1,7 @@
 {% if not user.is_superuser %}
     <div class="fr-form-group">
         <fieldset class="fr-fieldset">
-            <legend class="fr-fieldset__legend fr-text--regular" id='radio-legend'>
+            <legend class="fr-fieldset__legend fr-h4" id='radio-legend'>
                 {{ form_input.label }}
             </legend>
             <div class="fr-fieldset__content">
