--- a/templates/settings/user_list.html
+++ b/templates/settings/user_list.html
@@ -4,7 +4,7 @@
     <input type="hidden" id="page" name="page" value="{{users.number}}">
     <input type="hidden" id="order_by" name="order_by" value="{{order_by}}">
 
-    {% if total_user > 3 %}
+    {% if total_users > 3 %}
         <div class="fr-search-bar" id="header-search" role="search">
             <label class="fr-label" for="search_input">
                 Recherche
@@ -19,7 +19,7 @@
 
 <div class="fr-table fr-table--bordered table--layout-fixed">
     <table>
-        <caption>{{users.paginator.count}}{% if users.paginator.count != total_user %} / {{total_user}}{% endif %} utilisateur{{ users.paginator.count|pluralize }}</caption>
+        <caption>{{users.paginator.count}}{% if users.paginator.count != total_users %} / {{total_users}}{% endif %} utilisateur{{ users.paginator.count|pluralize }}</caption>
 
         <thead>
             <tr>
