--- a/templates/settings/users.html
+++ b/templates/settings/users.html
@@ -13,7 +13,7 @@
                 </div>
                 <div class='fr-col-12 fr-col-md-8 fr-col-lg-9 fr-pl-md-3w'>
 
-                    {% include 'settings/user_list.html' with users=users %}
+                    {% include 'settings/user_list.html' with users=paginated_users %}
 
                     {% if request.user.is_administrator %}
                         <button class="fr-btn fr-fi-add-circle-line fr-btn--icon-left fr-mt-3w" type="button" id="add_user">
