--- a/templates/settings/edit_administration.html
+++ b/templates/settings/edit_administration.html
@@ -12,19 +12,20 @@
                     {% include 'settings/common/side_menu.html' with active_menu='administrations' %}
                 </div>
                 <div class='fr-col-12 fr-col-md-8 fr-col-lg-9 fr-pl-md-3w'>
-                    <div class='fr-col-12'>
-                        <h3>Modification de l'administration ‹‹{{ form.nom.value }}››</h3>
-                        <form method="post" action="">
-                            {% csrf_token %}
-                            {% include "common/form/input_text.html" with form_input=form.nom  %}
-                            {% include "common/form/input_text.html" with form_input=form.code editable=request.user.is_superuser %}
-                            {% include "common/form/input_text.html" with form_input=form.ville_signature %}
+                    <h3>Modification de l'administration ‹‹{{ form.nom.value }}››</h3>
+                    <form method="post" action="">
+                        {% csrf_token %}
+                        {% include "common/form/input_text.html" with form_input=form.nom  %}
+                        {% include "common/form/input_text.html" with form_input=form.code editable=request.user.is_superuser %}
+                        {% include "common/form/input_text.html" with form_input=form.ville_signature %}
 
-                            <button class="fr-btn fr-fi-save-line fr-btn--icon-left" type="submit">
-                                Enregistrer
-                            </button>
-                        </form>
-                    </div>
+                        <button class="fr-btn fr-fi-save-line fr-btn--icon-left" type="submit">
+                            Enregistrer
+                        </button>
+                    </form>
+
+                    <h3 class="fr-mt-3w">Utilisateurs du bailleur ‹‹{{ form.nom.value }}››</h3>
+                    {% include 'settings/user_list.html' with users=paginated_users read_only=True %}
                 </div>
             </div>
         </div>
