--- a/templates/settings/edit_bailleur.html
+++ b/templates/settings/edit_bailleur.html
@@ -12,69 +12,72 @@
                     {% include 'settings/common/side_menu.html' with active_menu='bailleurs' %}
                 </div>
                 <div class='fr-col-12 fr-col-md-8 fr-col-lg-9 fr-pl-md-3w'>
-                    <div class='fr-col-12'>
-                        <h3>Modification du bailleur ‹‹{{ form.nom.value }}››</h3>
-                        <div role="warning" class="fr-alert fr-alert--warning fr-mb-3w">
-                            <p>Les modifications que vous apportez à votre bailleur seront appliquées à toutes les conventions qui ne sont pas encore validées</p>
-                        </div>
-                        <form method="post" action="">
-                            {% csrf_token %}
-                            <div class="fr-grid-row fr-grid-row--gutters">
-                                <div class="fr-col-12 fr-col-md-12">
+                    <h3>Modification du bailleur ‹‹{{ form.nom.value }}››</h3>
+                    <div role="warning" class="fr-alert fr-alert--warning fr-mb-3w">
+                        <p>Les modifications que vous apportez à votre bailleur seront appliquées à toutes les conventions qui ne sont pas encore validées</p>
+                    </div>
+                    <form method="post" action="">
+                        {% csrf_token %}
+                        <div class="fr-grid-row fr-grid-row--gutters">
+                            <div class="fr-col-12 fr-col-md-12">
 
-                                    <h4>Entreprise bailleur</h4>
+                                <h4>Entreprise bailleur</h4>
 
-                                    {% include "common/form/input_text.html" with form_input=form.nom object_field="bailleur__nom__"|add:form.uuid.value %}
+                                {% include "common/form/input_text.html" with form_input=form.nom object_field="bailleur__nom__"|add:form.uuid.value %}
 
-                                    {% include "common/form/select_enum.html" with form_input=form.type_bailleur editable=request.user.is_superuser %}
+                                {% include "common/form/select_enum.html" with form_input=form.type_bailleur editable=request.user.is_superuser %}
 
-                                    <div class="fr-mb-2w">
-                                        <div class="fr-grid-row fr-grid-row--gutters">
-                                            <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                                                {% include "common/form/input_text.html" with form_input=form.siret object_field="bailleur__siret__"|add:form.uuid.value %}
-                                            </div>
-                                            <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-pl-md-1w fr-mb-2w">
-                                                {% include "common/form/input_number.html" with step="0.01" form_input=form.capital_social mandatory=False object_field="bailleur__capital_social__"|add:form.uuid.value %}
-                                            </div>
+                                <div class="fr-mb-2w">
+                                    <div class="fr-grid-row fr-grid-row--gutters">
+                                        <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
+                                            {% include "common/form/input_text.html" with form_input=form.siret object_field="bailleur__siret__"|add:form.uuid.value %}
+                                        </div>
+                                        <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-pl-md-1w fr-mb-2w">
+                                            {% include "common/form/input_number.html" with step="0.01" form_input=form.capital_social mandatory=False object_field="bailleur__capital_social__"|add:form.uuid.value %}
                                         </div>
                                     </div>
+                                </div>
 
-                                    {% include "common/form/input_text.html" with form_input=form.adresse object_field="bailleur__adresse__"|add:form.uuid.value %}
+                                {% include "common/form/input_text.html" with form_input=form.adresse object_field="bailleur__adresse__"|add:form.uuid.value %}
 
-                                    <div class="fr-mb-2w">
-                                        <div class="fr-grid-row fr-grid-row--gutters">
-                                            <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                                                {% include "common/form/input_text.html" with form_input=form.code_postal object_field="bailleur__code_postal__"|add:form.uuid.value %}
-                                            </div>
-                                            <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-pl-md-1w fr-mb-2w">
-                                                {% include "common/form/input_text.html" with form_input=form.ville object_field="bailleur__ville__"|add:form.uuid.value %}
-                                            </div>
+                                <div class="fr-mb-2w">
+                                    <div class="fr-grid-row fr-grid-row--gutters">
+                                        <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
+                                            {% include "common/form/input_text.html" with form_input=form.code_postal object_field="bailleur__code_postal__"|add:form.uuid.value %}
+                                        </div>
+                                        <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-pl-md-1w fr-mb-2w">
+                                            {% include "common/form/input_text.html" with form_input=form.ville object_field="bailleur__ville__"|add:form.uuid.value %}
                                         </div>
                                     </div>
+                                </div>
 
-                                    <h4>Signataire de la convention</h4>
+                                <h4>Signataire de la convention</h4>
 
-                                    {% include "common/form/input_text.html" with form_input=form.signataire_nom object_field="bailleur__signataire_nom__"|add:form.uuid.value %}
+                                {% include "common/form/input_text.html" with form_input=form.signataire_nom object_field="bailleur__signataire_nom__"|add:form.uuid.value %}
 
-                                    <div class="fr-mb-2w">
-                                        <div class="fr-grid-row fr-grid-row--gutters">
-                                            <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                                                {% include "common/form/input_text.html" with form_input=form.signataire_fonction object_field="bailleur__signataire_fonction__"|add:form.uuid.value %}
-                                            </div>
-                                            <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-pl-md-1w fr-mb-2w">
-                                                {% include "common/form/input_date.html" with form_input=form.signataire_date_deliberation object_field="bailleur__signataire_date_deliberation__"|add:form.uuid.value %}
-                                            </div>
+                                <div class="fr-mb-2w">
+                                    <div class="fr-grid-row fr-grid-row--gutters">
+                                        <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
+                                            {% include "common/form/input_text.html" with form_input=form.signataire_fonction object_field="bailleur__signataire_fonction__"|add:form.uuid.value %}
+                                        </div>
+                                        <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-pl-md-1w fr-mb-2w">
+                                            {% include "common/form/input_date.html" with form_input=form.signataire_date_deliberation object_field="bailleur__signataire_date_deliberation__"|add:form.uuid.value %}
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            {% include "common/required_fields_info.html" %}
+                        </div>
+                        {% include "common/required_fields_info.html" %}
 
-                            <button class="fr-btn fr-fi-save-line fr-btn--icon-left" type="submit">
-                                Enregistrer
-                            </button>
-                        </form>
-                    </div>
+                        <button class="fr-btn fr-fi-save-line fr-btn--icon-left" type="submit">
+                            Enregistrer
+                        </button>
+                    </form>
+
+                    <h3 class="fr-mt-3w">Utilisateurs du bailleur ‹‹{{ form.nom.value }}››</h3>
+
+                    {% include 'settings/user_list.html' with users=paginated_users read_only=True %}
+
                 </div>
             </div>
         </div>
