--- a/templates/conventions/programme.html
+++ b/templates/conventions/programme.html
@@ -46,10 +46,10 @@
 
                         <div class="fr-grid-row fr-grid-row--gutters">
                             <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                                {% include "common/form/select_enum.html" with form_input=form.type_habitat object_field="programme__type_habitat__"|add:form.uuid.value %}
+                                {% include "common/form/input_select.html" with form_input=form.type_habitat object_field="programme__type_habitat__"|add:form.uuid.value %}
                             </div>
                             <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                                {% include "common/form/select_enum.html" with form_input=form.type_operation object_field="programme__type_operation__"|add:form.uuid.value %}
+                                {% include "common/form/input_select.html" with form_input=form.type_operation object_field="programme__type_operation__"|add:form.uuid.value %}
                             </div>
                         </div>
 
