--- a/templates/settings/user_profile.html
+++ b/templates/settings/user_profile.html
@@ -4,6 +4,14 @@
 
 {% block page_title %}Votre Profil - APiLos{% endblock%}
 
+{% block javascript_extras %}
+    <script src="{% static "virtual-select/dist/virtual-select.min.js" %}" nonce="{{request.csp_nonce}}"></script>
+{% endblock %}
+
+{% block css_extras %}
+    <link rel="stylesheet" href="{% static "virtual-select/dist/virtual-select.min.css" %}">
+{% endblock %}
+
 {% block content %}
     <div class="fr-container-fluid">
         <div class="fr-container">
@@ -27,6 +35,9 @@
                             {% include "common/form/input_text.html" with form_input=form.last_name %}
                             {% include "common/form/input_telephone.html" with form_input=form.telephone %}
                             {% include "settings/form/email_preferences.html" with user=request.user form_input=form.preferences_email %}
+                            {% if not request.user.is_superuser and request.user.is_bailleur %}
+                                {% include "common/form/input_multiselect.html" with form_input=form.filtre_departements enum=departements %}
+                            {% endif %}
                             {% if request.user.is_superuser %}
                                 <h4>Rôles spéciaux</h4>
                             {% else %}
