filter by departement for bailleur users when the filtre_departements is set

--- a/templates/conventions/annexes.html
+++ b/templates/conventions/annexes.html
@@ -31,7 +31,7 @@
                             <p>La déclaration des stationnements par type se fera à la prochaine étape</p>
                         </div>
 
-                        <h4>Annexes associés aux logements exclues du calcul de la surface utile et pouvant donner lieu à un loyer accessoire</h4>
+                        <h4>Annexes associées aux logements exclues du calcul de la surface utile et pouvant donner lieu à un loyer accessoire</h4>
 
 
                         <div id='download_upload_block' {% if not editable %}hidden{% endif %}>
