--- a/templates/conventions/annexes.html
+++ b/templates/conventions/annexes.html
@@ -31,7 +31,7 @@
                             <p>La déclaration des stationnements par type se fera à la prochaine étape</p>
                         </div>
 
-                        <h4>Annexes associés aux logements exclues du calcul de la surface utile et pouvant donner lieu à un loyer accessoire</h4>
+                        <h4>Annexes associées aux logements exclues du calcul de la surface utile et pouvant donner lieu à un loyer accessoire</h4>
 
 
                         <div id='download_upload_block' {% if not editable %}hidden{% endif %}>
@@ -83,13 +83,13 @@
                                                         id="{{form_annexe.uuid.id_for_label}}"
                                                         name="{{form_annexe.uuid.html_name}}"
                                                         value="{{ form_annexe.uuid.value|default_if_none:'' }}">
-                                                    {% include "common/form/select_enum.html" with form_input=form_annexe.typologie parent_object_field=main_object_field editable=editable_upload %}
+                                                    {% include "common/form/input_select.html" with form_input=form_annexe.typologie parent_object_field=main_object_field editable=editable_upload %}
                                                 </td>
                                                 <td>
                                                     {% include "common/form/input_text.html" with form_input=form_annexe.logement_designation parent_object_field=main_object_field editable=editable_upload %}
                                                 </td>
                                                 <td>
-                                                    {% include "common/form/select_enum.html" with form_input=form_annexe.logement_typologie parent_object_field=main_object_field editable=editable_upload %}
+                                                    {% include "common/form/input_select.html" with form_input=form_annexe.logement_typologie parent_object_field=main_object_field editable=editable_upload %}
                                                 </td>
                                                 <td>
                                                     {% include "common/form/input_number.html" with form_input=form_annexe.surface_hors_surface_retenue step="0.01" parent_object_field=main_object_field editable=editable_upload %}
